src/objects/Renewal_Task__c.object
<CustomObject>
    <description>Object to hold dashboard data for opportunity clone enhancements.</description>
    <fields>
        <fullName>CAM_Post_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAM Post Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloned_Opportunity_Number__c</fullName>
        <formula>Cloned_Opportunity__r.Opportunity_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cloned Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloned_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Newly cloned opportunity as a result of execution of renewal task.</description>
        <label>Cloned Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Renewal Tasks (Cloned Opportunity)</relationshipLabel>
        <relationshipName>Renewal_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cloning_Action__c</fullName>
        <label>Cloning Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Renew</fullName>
                </value>
                <value>
                    <fullName>No Change</fullName>
                </value>
                <value>
                    <fullName>Change Detail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloning_Status__c</fullName>
        <label>Cloning Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Period_Shift__c</fullName>
        <defaultValue>12</defaultValue>
        <label>Data Period Shift</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Removed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ESPSFDCQI-13271</description>
        <label>Is Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Revenue_Dynamics_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Revenue Dynamics Complete ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Renew_Reason__c</fullName>
        <label>No Renew Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cost / Value</fullName>
                </value>
                <value>
                    <fullName>Lost to Competition</fullName>
                </value>
                <value>
                    <fullName>Merger Impact</fullName>
                </value>
                <value>
                    <fullName>Product Switch</fullName>
                </value>
                <value>
                    <fullName>IMS Offering Discontinued</fullName>
                </value>
                <value>
                    <fullName>Loss of Exclusivity</fullName>
                </value>
                <value>
                    <fullName>Already Renewed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Renewal Tasks</relationshipLabel>
        <relationshipName>Renewal_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Opportunity_Number__c</fullName>
        <formula>Opportunity__r.Opportunity_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Business_Unit__c</fullName>
        <formula>text(Owner:User.Business_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Country__c</fullName>
        <label>Owner Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Increase__c</fullName>
        <label>% Price Increase</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revenue_Dynamics_Link__c</fullName>
        <formula>HYPERLINK(&quot;/apex/RevenueDynamics?id=&quot;&amp;Id , &quot;Click here to enter rev dynamics&quot;,&quot;_new&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Dynamics</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Round_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Round Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Targeted_Close_Date__c</fullName>
        <label>Targeted Close Date</label>
        <type>Date</type>
    </fields>
    <label>Renewal Task</label>
    <nameField>
        <displayFormat>RT-{0000}</displayFormat>
        <label>Renewal Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewal Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cloned_opp_rule</fullName>
        <active>false</active>
        <description>cloned opportunity can be specified only if Cloning action is &apos;Basic Clone&apos; or &apos;Detail Clone&apos;.
cloned opportunity must be specified if cloning status is &apos;cloned&apos;.</description>
        <errorConditionFormula>IF(ISBLANK(Cloned_Opportunity__c),
     IF(Cloning_Status__c == &quot;cloned&quot;, TRUE, FALSE),
     IF( ISPICKVAL(Cloning_Action__c, &quot;Basic Clone&quot;) || 
           ISPICKVAL(Cloning_Action__c,  &quot;Detail Clone&quot;),
           FALSE, 
           TRUE)
)</errorConditionFormula>
        <errorDisplayField>Cloned_Opportunity__c</errorDisplayField>
        <errorMessage>cloned opportunity can be specified only if Cloning action is &apos;Basic Clone&apos; or &apos;Detail Clone&apos;.
cloned opportunity must be specified if cloning status is &apos;cloned&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cloning_Action_Rule</fullName>
        <active>false</active>
        <description>For a new renewal task cloning action must be empty and for the existing one it must not be empty if it already has some value.</description>
        <errorConditionFormula>IF(ISNEW() ,
     IF( ISPICKVAL(Cloning_Action__c, &quot;&quot;), 
          FALSE, 
          TRUE
    ),
    IF( PRIORVALUE(Cloning_Action__c) !=&quot;&quot;,
         IF( ISPICKVAL(Cloning_Action__c, &quot;&quot;), 
              TRUE, 
              FALSE
         ),
         FALSE 
    )
)</errorConditionFormula>
        <errorDisplayField>Cloning_Action__c</errorDisplayField>
        <errorMessage>For a new renewal task cloning action must be empty and for the existing one it must not be empty if it already has some value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cloning_Status_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(Cloning_Action__c, &quot;&quot;),
     IF(ISBLANK(Cloning_Status__c), FALSE, TRUE),
     IF(ISPICKVAL(Cloning_Action__c, &quot;No Renew&quot;),
          IF(Cloning_Status__c == &quot;No Renew&quot;, FALSE, TRUE),
          IF(ISPICKVAL(Cloning_Action__c, &quot;Basic Clone&quot;),
              IF(Cloning_Status__c == &quot;queued&quot; || Cloning_Status__c == &quot;cloned&quot;, FALSE, TRUE),
              IF(ISPICKVAL(Cloning_Action__c, &quot;Detail Clone&quot;),
                  IF(Cloning_Status__c == &quot;queued&quot; || Cloning_Status__c == &quot;cloned&quot; || Cloning_Status__c == &quot;Awaiting Details&quot;,                   FALSE, TRUE),
                  FALSE
              )  
         )
     )
)</errorConditionFormula>
        <errorDisplayField>Cloning_Status__c</errorDisplayField>
        <errorMessage>if cloning action is none, it must not be specified.
if action is &apos;No Renew&apos;, it must be &apos;No Renew&apos;
if action is &apos;Basic Clone&apos;, it can be &apos;queued&apos; or &apos;cloned&apos;
if action is &apos;Detail Clone&apos;, it can be &apos;awaiting Details&apos;, &apos;queued&apos; or &apos;cloned&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Close_Date_Rule</fullName>
        <active>true</active>
        <description>Close Date Must be specified if Cloning Action is &quot;Basic Clone&quot; or &quot;Detail Clone&quot;</description>
        <errorConditionFormula>IF( ISPICKVAL(Cloning_Action__c, &quot;Basic Clone&quot;) || ISPICKVAL(Cloning_Action__c, &quot;Detail Clone&quot;) ,
     IF(ISBLANK(Targeted_Close_Date__c ),
         TRUE,
         FALSE          
     ),
     FALSE
)</errorConditionFormula>
        <errorDisplayField>Targeted_Close_Date__c</errorDisplayField>
        <errorMessage>Close Date Must be specified if Cloning Action is &quot;Basic Clone&quot; or &quot;Detail Clone&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Renew_Reason_Rule</fullName>
        <active>true</active>
        <description>If Cloning action is &apos;No Renew&apos;, No Renew Reason must be specified. For Some Other Cloning action, No Renew Reason must be empty.</description>
        <errorConditionFormula>IF(ISPICKVAL(Cloning_Action__c, &quot;No Renew&quot;) ,
     IF(ISPICKVAL(No_Renew_Reason__c, &quot;&quot;),
         TRUE,
         FALSE          
     ),
     IF(ISPICKVAL(No_Renew_Reason__c, &quot;&quot;),
         FALSE,
         TRUE          
     )
)</errorConditionFormula>
        <errorDisplayField>No_Renew_Reason__c</errorDisplayField>
        <errorMessage>If Cloning action is &apos;No Renew&apos;, No Renew Reason must be specified. For Some Other Cloning action, No Renew Reason must be empty..</errorMessage>
    </validationRules>
</CustomObject>